[project]
name = "ankigengpt"
version = "0"
description = ""
readme = "README.md"

dependencies = [
    "beautifulsoup4==4.12.3",
    "ebooklib==0.18",
    "genanki==0.13.1",
    "jinja2==3.1.4",
    "openai==1.55.1",
    "pdfplumber==0.11.4",
    "pydub==0.25.1",
    "pyyaml==6.0.2",
    "ratelimit==2.2.1",
    "requests>=2.32.3",
    "rich==13.9.4",
    "tiktoken==0.8.0",
    "typer==0.13.1",
]
[project.scripts]
ankigengpt = "ankigengpt.__main__:main"

[project.optional-dependencies]
dev = ["pre-commit==4.0.1"]

[tool.uv]
dev-dependencies = ["pre-commit>=3.3.3"]

[tool.uv.workspace]
members = ["test"]
